add color range

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Snake Game</title>
     </head>
     <body>
+        <input style="display: block" type="range" />
         <script src="assets/p5.min.js"></script>
         <script src="snake.js"></script>
         <script src="food.js"></script>
