--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="assets/p5.min.js"></script>
         <script src="snake.js"></script>
         <script src="food.js"></script>
+        <script src="js/snake.js"></script>
         <script src="js/sketch.js"></script>
     </body>
 </html>
