--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <body>
         <input style="display: block" type="range" />
         <script src="assets/p5.min.js"></script>
-        <script src="snake.js"></script>
-        <script src="food.js"></script>
+        <script src="js/food.js"></script>
         <script src="js/snake.js"></script>
         <script src="js/sketch.js"></script>
     </body>
