add menu with buttons for starting the game and settings

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
     <head>
         <title>Snake Game</title>
+        <link href="style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
+        <div id="menu">
+            <p class="menu-head">MENU</p>
+            <button id="play-button">Play</button>
+            <button id="settings-button">Settings</button>
+        </div>
         <script src="assets/p5.min.js"></script>
         <script src="js/food.js"></script>
         <script src="js/snake.js"></script>
