--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <div id="menu">
             <p class="menu-head">MENU</p>
             <button id="play-button">Play</button>
-            <button id="settings-button">Settings</button>
+            <input id="difficulty-bar" type="range" min="10" max="20" step="1" value="15">
+            <p id="difficulty-indicator">Difficulty</p>
         </div>
         <script src="assets/p5.min.js"></script>
         <script src="js/food.js"></script>
