--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <div id="menu">
             <p class="menu-head">MENU</p>
             <button id="play-button">Play</button>
-            <input id="difficulty-bar" type="range" min="10" max="20" step="1" value="15">
-            <p id="difficulty-indicator">Difficulty</p>
+            <input id="difficulty-bar" type="range" min="3" max="10" step="1" value="6">
+            <p id="difficulty-indicator">Difficulty: 6</p>
         </div>
         <script src="assets/p5.min.js"></script>
         <script src="js/food.js"></script>
